<resources>

    <string name="app_name">Quantum</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="budgets">Budgets</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Quantum</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="value">Money Spent</string>
    <string name="decimal">.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
	<string name="monthly_budget_object">Monthly Budget</string>
	<string name="title_set_budget">Set Budget</string>
	<string name="placeholder_preference">This is a placeholder; you won.</string>
	<string name="title_change_budget">How much did you spend?</string>
	<string name="monthly_budget">Monthly Budget</string>
	<string name="monthly_budget_summary">What is your budget every month?</string>
	<string name="clear_budget_confirm">Are you sure you want to clear the budget?</string>
	<string name="clear_budget">Clear Budget?</string>
	<string name="reset_monthly_budget">  Reset Monthly Budget</string>
	<string name="reset_monthly_budget_summary">  Resets the monthly budget to the set value.</string>
	<string name="delete">Delete</string>
	<string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="history">History</string>
    <string name="create_first_budget">Create your first budget!</string>
    <string name="budget_title">Budget title</string>
    <string name="budget_value">Budget amount</string>
    <string name="budget_interval">Budget frequency</string>
    <string name="create_new_budget">New Budget</string>
    <string name="save">Save</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="welcome">Welcome!</string>
    <string name="thank_you">Thanks for installing Quantum, the budgeting app of the future!</string>
    <string name="click_to_continue">Click here to continue.</string>
    <string name="budget_hint">Budget name</string>
    <string name="dollars_hint">Dollar amount</string>
    <string name="new_budget">Create a new budget</string>
    <string name="delete_selected_budget">Delete this budget</string>
    <string name="undo_transaction_image_button">Undo this transaction</string>
    <string name="quick_spend">Quick Spend</string>
    <string name="add_quick_spend">Add Quick Spend</string>
    <string name="quick_spend_title">Name your Quick Spend item.</string>
    <string name="quick_spend_value">Input the value of your Quick Spend item.</string>
    <string name="new_quick_spend_item">New Quick Spend Item</string>
    <string name="delete_quick_spend">You can add it back later if you want to.</string>
    <string name="delete_quick_spend_title">Delete Quick Spend Item?</string>
    <string name="delete_budget_title">Delete Budget?</string>
    <string name="all_data_lost">Are you sure? All data will be lost!</string>
    <string name="sub_interval_day">What day of the week?</string>
    <string name="sub_interval_month">What day of the month?</string>
    <string name="done">Done</string>
    <string name="modify_transaction">Add/Subtract from transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="spend">New Transaction</string>
    <string name="rollover">Manual Rollover</string>
    <string name="transaction_info">Transaction Info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="budget_settings">Budget Settings</string>
    <string name="pref_clear_history">Clear History</string>
    <string name="pref_summary_clear_history">Delete all information about this budget and reset budget</string>
    <string name="pref_manual_reset">Manual Reset</string>
    <string name="pref_summary_manual_reset">Reset the budget and add what\'s left to the surplus total</string>
    <string name="pref_clear_surplus">Clear Surplus</string>
    <string name="pref_summary_clear_surplus">Reset the surplus value to zero</string>
    <string name="pref_change_budget_amount">Change Budget Amount</string>
    <string name="pref_summary_change_budget_amount">Change the amount that the budget resets to</string>
    <string name="pref_change_reset_type">Change Reset Type</string>
    <string name="pref_summary_change_reset_type">Change how often the budget value resets</string>
    <string name="pref_change_reset_date">Change Reset Date</string>
    <string name="pref_summary_change_reset_date">Change the date that the budget resets on</string>
    <string name="pref_change_day_of_month">Change Day of Month</string>
    <string name="pref_change_day_of_month_summary">Change the day of the month that the budget updates on</string>
    <string name="pref_change_name">Change Name</string>
    <string name="pref_change_name_summary">Change the name of this budget account</string>
    <string name="new_transaction">Create New Transaction</string>
    <string name="where">Where did you spend your money?</string>
    <string name="memo">Memo</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="location">Location</string>
    <string name="lets_go_string">Let\'s go!</string>
    <string name="saving_with_a_value_of_0">Saving with a value of 0 will delete all of this transaction\'s data.</string>
    <string name="remaining">remaining</string>
    <string name="budget_delete_error">Cannot delete budget. You must have at least one.</string>
    <string name="okay">Okay</string>
    <string name="error_invalid_number">Please enter a valid number.</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    
</resources>