<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:money="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/memo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memo"/>

    <me.williamhester.Quantum.ui.views.MoneyPickerView
        android:id="@+id/money_picker_view"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        money:textSize="36" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delete_button"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>