<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText android:id="@+id/budget_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/budget_hint"/>

    <EditText android:id="@+id/budget_value"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:hint="@string/dollars_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/budget_interval"
            android:textSize="15sp" />

        <Spinner android:id="@+id/budget_interval"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/interval_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <Spinner android:id="@+id/sub_interval_spinner"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    	<Button android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content" />

    	<Button android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>